@@ -3,6 +3,7 @@
 	* Fixed bug with international hashtags
 	* Twitter Text upgrade
 	+ Automatic tweet editor width positioning (special for Chrome 14 with native scrollbars on OS X Lion)
+	+ Tweet pictures inline preview
 
 0.35:
 	* Some style changes (thanks @GrawlCore)
